Modificações na semântica da página

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <div class="box_principal">
     <img class="imagem_qrCode" src="images/image-qr-code.png" alt="QR-Code Frontend Mentor">
-    <h2 class="box_principal_titulo">Improve your front-end skills by building projects</h2>
-    <p class="box_principal_descricao">Scan the QR code to visit Frontend Mentor and take your coding skills to the
-      next level</p>
+    <h1 class="box_principal_titulo">Improve your front-end skills by building projects</h1>
+    <h2 class="box_principal_descricao">Scan the QR code to visit Frontend Mentor and take your coding skills to the
+      next level</h2>
   </div>
 
 
